# PojavLauncher_iOS_Crack

./: README.md
.github/workflows/: development.yml
Natives/: AccountListViewController.m  AppDelegate.m  CMakeLists.txt  JavaLauncher.m  MinecraftResourceDownloadTask.m  PLLocalization.h  PLLocalization.m  PLLocalizationUtils.h  PLLocalizationUtils.m  utils.h  utils.m
Natives/authenticator/: BaseAuthenticator.h  BaseAuthenticator.m  ElyByAuthenticator.h  ElyByAuthenticator.m
Natives/resources/en.lproj/: Localizable.strings
Natives/resources/ru.lproj/: Localizable.strings
